change search color

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ menu:
 favicon: /favicon.ico
 
 # Set default keywords (Use a comma to separate)
-keywords: "Hexo,next"
+keywords: "Hexo,Mala"
 
 # Set rss to false to disable feed link.
 # Leave rss as empty to use site's feed link.
