--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,19 @@ menu:
   about: /about
   #commonweal: /404.html
 
+# 设定菜单项的图标，对应的字段是 menu_icons。 此设定格式是 item name: icon name，
+# 其中 item name 与上一步所配置的菜单名字对应，icon name 是 Font Awesome 图标的 名字。
+# 而 enable 可用于控制是否显示图标，你可以设置成 false 来去掉图标。
+menu_icons:
+  enable: true
+  # Icon Mapping.
+  home: home
+  about: user
+  categories: th
+  tags: tags
+  archives: archive
+  #commonweal: heartbeat
+
 # Place your favicon.ico to /source directory.
 favicon: /favicon.ico
 
@@ -29,7 +42,7 @@ icon_font: default
 # Code Highlight theme
 # Available value: normal | night | night eighties | night blue | night bright
 # https://github.com/chriskempson/tomorrow-theme
-highlight_theme: night bright
+highlight_theme: night bright 
 
 
 # MathJax Support
@@ -104,7 +117,7 @@ fancybox: true
 # Some suprise plugs
 suprise:
   ball: false # 首页动画
-  assist: true # 首页主题色转换圆形按钮
+  assist: false # 首页主题色转换圆形按钮
 
 # donate
 donate:
@@ -114,7 +127,7 @@ donate:
   alipay: http://ofdub8np7.bkt.clouddn.com/pay/alipay.png
 
 # 不蒜子统计
-busuanzi: false
+busuanzi: true
 
 # Static files
 vendors: vendors
