--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,12 @@
 {
   "name": "Mala",
   "version": "0.1.0",
-  "homepage": "http://blog.idhyt.com/",
+  "homepage": "http://whtacm.cc/",
   "authors": [
-    "idhyt <idhyt@hotmail.com>"
+    "robin <whtacm@gmail.com>"
   ],
   "description": "Black theme for Hexo",
-  "repository": "https://github.com/idhyt/hexo-theme-next/tree/magiclamp",
+  "repository": "https://github.com/whtacm/hexo-theme-next/tree/magiclamp",
   "keywords": [
     "hexo",
     "notes",
@@ -19,7 +19,7 @@
     "**/.*",
     "node_modules",
     "bower_components",
-    "source/vendors",
+    "source/lib",
     "test",
     "tests",
     "screenshots"
