--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ scroll_to_more: true
 
 
 # Automatically add list number to toc.
-toc_list_number: true
+toc_list_number: false
 
 # Automatically Excerpt
 auto_excerpt:
